fixing next or complete
